fix issue sending inline images when e-mail address of identity has whitespace, r=neil, bug 685462